--- a/hyperv/tasks/create_gen2_vm.yml
+++ b/hyperv/tasks/create_gen2_vm.yml
@@ -1,6 +1,7 @@
 ---
 # tasks file for hyperv
-- name: Create VM
+- name: Create Gen2 VM
+  when: vm_generation == 2
   win_hyperv_guest:
     name: "{{ vm_name }}"
     state: "{{ vm_state }}"
@@ -9,3 +10,11 @@
     network_switch: "{{ vm_switch }}"
     vmpath: "{{ vmpath }}"
     osdiskpath: "{{ osdiskpath }}\\{{vm_name}}-OS.vhdx"
+
+- name: Set CPU
+  when: vm_cpu is defined
+  win_shell: |
+    $cpucount = (Get-VMProcessor -VMName {{ vm_name }}).Count
+    if ($cpucount -ne {{ vm_cpu }}) {
+      Set-VM -Name {{ vm_name }} -ProcessorCount {{ vm_cpu }}
+    }
