--- a/hyperv/vars/main.yml
+++ b/hyperv/vars/main.yml
@@ -3,6 +3,7 @@
 vm_name: "{{ vmname | upper }}"
 vm_state: "{{ vmstate }}"
 vm_memory: "{{ vmmemory }}"
+vm_cpu: "{{ vmcpu }}"
 vm_generation: "{{ vmgeneration }}"
 vm_switch: "{{ vmswitch }}"
 vm_osvhdsize_bytes: "{{ vmosvhdsize_bytes }}"
