--- a/hyperv/tasks/create_gen1_vm.yml
+++ b/hyperv/tasks/create_gen1_vm.yml
@@ -1,10 +1,12 @@
 ---
 # tasks file for hyperv
 - name: Create Gen1 VM
-  when: vm_generation == 1
+  when: 
+    - vm_generation == 1
+    - vm_state == 'present' or 'started'
   win_hyperv_guest:
     name: "{{ vm_name }}"
-    state: "{{ vm_state }}"
+    state: present
     generation: "{{ vm_generation }}"
     memory: "{{ vm_memory }}"
     network_switch: "{{ vm_switch }}"
@@ -12,13 +14,12 @@
     osdiskpath: "{{ osdiskpath }}"
 
 - name: Set CPU
-  when: vm_cpu is defined
+  when: 
+    - vm_cpu is defined
+    - vm_generation == 1
+    - vm_state == 'present' or 'started'
   win_shell: |
     $cpucount = (Get-VMProcessor -VMName {{ vm_name }}).Count
     if ($cpucount -ne {{ vm_cpu }}) {
       Set-VM -Name {{ vm_name }} -ProcessorCount {{ vm_cpu }}
-    } 
-    else {
-      $Ansible.Changed = $false 
     }
-  
