--- a/hyperv/handlers/main.yml
+++ b/hyperv/handlers/main.yml
@@ -1,6 +1,23 @@
 ---
 # handlers file for hyperv
+- name: Set CPU
+  when: 
+    - vm_cpu is defined
+    - vm_state == 'present' or 'started'
+  win_shell: |
+    $cpucount = (Get-VMProcessor -VMName {{ vm_name }}).Count
+    if ($cpucount -ne {{ vm_cpu }}) {
+      Set-VM -Name {{ vm_name }} -ProcessorCount {{ vm_cpu }}
+    } else { $Ansible.Changed = $false }
+
 - name: Power On Vm
+  when: vm_state == 'started'
   win_hyperv_guest:
     name: "{{ vm_name }}"
     state: started
+
+- name: Remove VM Dir
+  when: vm_state == 'absent'
+  win_file:
+    path: "{{ vmpath }}\\{{ vm_name }}"
+    state: absent
