--- a/hyperv/tasks/delete_vm.yml
+++ b/hyperv/tasks/delete_vm.yml
@@ -1,7 +1,6 @@
 ---
 - name: Destroy as needed
-  when: vm_state == 'absent'
   win_hyperv_guest:
     name: "{{ vm_name }}"
     state: absent
-  notify: Remove VM Dir
+  notify: Remove Vm Directory
