--- a/hyperv/tasks/main.yml
+++ b/hyperv/tasks/main.yml
@@ -14,17 +14,12 @@
 - name: Setting CPU as needed
   when: 
     - vm_state != 'absent'
-  notify: Set CPU
-  set_fact:
-    vm_cpu: "{{ vm_cpu | int }}"
+  import_tasks: set_cpu.yml
 
-- name: Power On as needed
+- name: Power on as needed
+  import_tasks: poweron_vm.yml
   when: vm_state == 'started'
-  notify: Power On Vm
-  debug:
-    msg: "VM Started"
 
 - name: Destroy as needed
   import_tasks: delete_vm.yml
-  when: 
-    - vm_state == 'absent'
+  when: vm_state == 'absent'
