--- a/hyperv/vars/main.yml
+++ b/hyperv/vars/main.yml
@@ -1,5 +1,4 @@
 ---
-# vars file for hyperv
 vm_name: "{{ vmname | upper }}"
 vm_state: "{{ vmstate }}"
 vm_memory: "{{ vmmemory }}"
@@ -7,3 +6,4 @@ vm_cpu: "{{ vmcpu }}"
 vm_generation: "{{ vmgeneration }}"
 vm_switch: "{{ vmswitch }}"
 vm_osvhdsize_bytes: "{{ vmosvhdsize_bytes }}"
+vm_osdiskpath: "{{ vmosdiskpath }}"
